--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             Original Video ->
         </div>
         <div class="vid">
-            <video src="https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/woodstock.mp4" type="video/mp4" id="Original_Video" loop autoplay muted>
+            <video src="https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/woodstock.mp4" type="video/mp4" id="Original_Video" loop autoplay muted>
         </div>
         </video>
         <div class="vid_description">
             AI Generated ->
         </div>
         <div class="vid">
-            <video src="https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/Generation1.mp4" type="video/mp4" id="AI_Vid" loop autoplay muted>
+            <video src="https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation1.mp4" type="video/mp4" id="AI_Vid" loop autoplay muted>
 
             </video>
         </div>
@@ -60,24 +60,24 @@
         const currTime = Original_Vid.currentTime;
         switch (event.key) {
             case '1':
-                AI_Vid.src = "https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/Generation1.mp4"
+                AI_Vid.src = "https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation1.mp4"
                 AI_Vid.currentTime = currTime;
                 break;
             case '2':
-                AI_Vid.src = "https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/Generation2.mp4"
+                AI_Vid.src = "https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation2.mp4"
                 AI_Vid.currentTime = currTime;
                 break;
             case '3':
-                AI_Vid.src = "https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/Generation4.mp4"
+                AI_Vid.src = "https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation4.mp4"
                 AI_Vid.currentTime = currTime;
                 break;
 
             case '4':
-                AI_Vid.src = "https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/Generation5.mp4"
+                AI_Vid.src = "https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation5.mp4"
                 AI_Vid.currentTime = currTime;
                 break;
             case '5':
-                AI_Vid.src = "https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/Generation6.mp4"
+                AI_Vid.src = "https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation6.mp4"
                 AI_Vid.currentTime = currTime;
 
                 break;
