fixed video source

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             Original Video ->
         </div>
         <div class="vid">
-            <video src="https://media.githubusercontent.com/media/methot-ilya-3ds.github.io/main/woodstock.mp4" type="video/mp4" id="Original_Video" loop autoplay muted>
+            <video src="https://github.com/methot-ilya-3ds/methot-ilya-3ds.github.io/blob/main/woodstock.mp4?raw=true" type="video/mp4" id="Original_Video" loop autoplay muted>
         </div>
         </video>
         <div class="vid_description">
             AI Generated ->
         </div>
         <div class="vid">
-            <video src="https://media.githubusercontent.com/media/methot-ilya-3ds.github.io/main/Generation1.mp4" type="video/mp4" id="AI_Vid" loop autoplay muted>
+            <video src="https://github.com/methot-ilya-3ds/methot-ilya-3ds.github.io/blob/main/Generation1.mp4?raw=true" type="video/mp4" id="AI_Vid" loop autoplay muted>
 
             </video>
         </div>
