fixed video source

--- a/index.html
+++ b/index.html
@@ -60,24 +60,24 @@
         const currTime = Original_Vid.currentTime;
         switch (event.key) {
             case '1':
-                AI_Vid.src = "https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation1.mp4"
+                AI_Vid.src = "https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/blob/main/Generation1.mp4?raw=true"
                 AI_Vid.currentTime = currTime;
                 break;
             case '2':
-                AI_Vid.src = "https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation2.mp4"
+                AI_Vid.src = "https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/blob/main/Generation2.mp4?raw=true"
                 AI_Vid.currentTime = currTime;
                 break;
             case '3':
-                AI_Vid.src = "https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation4.mp4"
+                AI_Vid.src = "https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/blob/main/Generation4.mp4?raw=true"
                 AI_Vid.currentTime = currTime;
                 break;
 
             case '4':
-                AI_Vid.src = "https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation5.mp4"
+                AI_Vid.src = "https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/blob/main/Generation5.mp4?raw=true"
                 AI_Vid.currentTime = currTime;
                 break;
             case '5':
-                AI_Vid.src = "https://methot-ilya-3ds.github.io/WeddingAnniversary.github.io/Generation6.mp4"
+                AI_Vid.src = "https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/blob/main/Generation6.mp4?raw=true"
                 AI_Vid.currentTime = currTime;
 
                 break;
