fixed video source

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             5: Horror?!
         </div>
     </div>
+    <video class="hidden-video" src="https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/blob/main/Generation1.mp4?raw=true"></video>
+    <video class="hidden-video" src="https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/blob/main/Generation2.mp4?raw=true"></video>
+    <video class="hidden-video" src="https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/blob/main/Generation4.mp4?raw=true"></video>
+    <video class="hidden-video" src="https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/blob/main/Generation5.mp4?raw=true"></video>
+    <video class="hidden-video" src="https://github.com/methot-ilya-3ds/WeddingAnniversary.github.io/blob/main/Generation6.mp4?raw=true"></video>
+
 </body>
 
 <script>
